--- a/secondTable.html
+++ b/secondTable.html
@@ -8,71 +8,71 @@
   </head>
   <body style="padding: 50px">
     <div class="angry-grid">
-      <div id="item-0">
+      <div id="item-0" class="center">
         <h3>ՀԱՇԻՎ-ԱՊՐԱՆՔԱԳԻՐ</h3>
         <p>(ծառայությունների մատուցման, աշխատանքների կատարման)</p>
       </div>
-      <div id="item-1">
+      <div id="item-1" class="center">
         <h3>Պայմանագիր</h3>
       </div>
-      <div id="item-2">
+      <div id="item-2" class="center">
         <h3>Կնքման ամսաթիվ</h3>
       </div>
-      <div id="item-3">
+      <div id="item-3" class="middle">
         <h3>Համար</h3>
       </div>
-      <div id="item-4">
+      <div id="item-4" class="center">
         <p>Թելսել Մարկետ Օֆերտա</p>
       </div>
       <div id="item-5">&nbsp;</div>
       <div id="item-6">&nbsp;</div>
-      <div id="item-7">
+      <div id="item-7" class="middle">
         <h3>Լրացուցիչ տվյալներ(պայմաններ)</h3>
       </div>
       <div id="item-8">&nbsp;</div>
-      <div id="item-9">
+      <div id="item-9" class="middle">
         <h3>ՀԴՄ կտրոնի համար</h3>
       </div>
       <div id="item-10">&nbsp;</div>
-      <div id="item-11">
+      <div id="item-11" class="center">
         <h3>Ծառայություններ մատուցող (աշխատանքներ կատարող) անձի</h3>
       </div>
       <div id="item-12">&nbsp;</div>
-      <div id="item-13">
+      <div id="item-13" class="center">
         <h3>Հարկ վճարողի հաշվեհամարը (ՀՎՀՀ)</h3>
       </div>
-      <div id="item-14">
+      <div id="item-14" class="center">
         <p>0</p>
       </div>
-      <div id="item-15">
+      <div id="item-15" class="center">
         <p>0</p>
       </div>
-      <div id="item-16">
+      <div id="item-16" class="center">
         <p>2</p>
       </div>
-      <div id="item-17">
+      <div id="item-17" class="center">
         <p>5</p>
       </div>
-      <div id="item-18">
+      <div id="item-18" class="center">
         <p>7</p>
       </div>
-      <div id="item-19">
+      <div id="item-19" class="center">
         <p>6</p>
       </div>
-      <div id="item-20">
+      <div id="item-20" class="center">
         <p>6</p>
       </div>
-      <div id="item-21">
+      <div id="item-21" class="center">
         <p>3</p>
       </div>
       <div id="item-22"></div>
       <div id="item-23">&nbsp;</div>
       <div id="item-24">&nbsp;</div>
       <div id="item-25">&nbsp;</div>
-      <div id="item-26">
+      <div id="item-26" class="center">
         <h3>Անվանումը</h3>
       </div>
-      <div id="item-27">
+      <div id="item-27" class="center">
         <h3>Ավելացված հարկ վճարողի հաշվառման համարը</h3>
       </div>
       <div id="item-28">&nbsp;</div>
@@ -87,248 +87,244 @@
       <div id="item-37">&nbsp;</div>
       <div id="item-38">&nbsp;</div>
       <div id="item-39">&nbsp;</div>
-      <div id="item-40">
+      <div id="item-40" class="middle">
         <h3>Բանկային տվյալներ</h3>
       </div>
       <div id="item-41">&nbsp;</div>
       <div id="item-42">&nbsp;</div>
-      <div id="item-43">
+      <div id="item-43" class="middle">
         <h3>Գտնվելու վայրը(հասցե)</h3>
       </div>
       <div id="item-44">&nbsp;</div>
-      <div id="item-45">
+      <div id="item-45" class="middle">
         <h3>Լրացուցիչ տվյալներ</h3>
       </div>
       <div id="item-46">&nbsp;</div>
       <div id="item-47">&nbsp;</div>
-      <div id="item-48">
+      <div id="item-48" class="center">
         <h3>Ծառայություններ (աշխատանքներ) ստացող անձի</h3>
       </div>
       <div id="item-49">&nbsp;</div>
-      <div id="item-50">
+      <div id="item-50" class="center">
         <h3>Հարկ վճարողի հաշվեհամարը (ՀՎՀՀ)</h3>
       </div>
-      <div id="item-51">
+      <div id="item-51" class="center">
         <p>0</p>
       </div>
-      <div id="item-52">
+      <div id="item-52" class="center">
         <p>0</p>
       </div>
-      <div id="item-53">
+      <div id="item-53" class="center">
         <p>2</p>
       </div>
-      <div id="item-54">
+      <div id="item-54" class="center">
         <p>3</p>
       </div>
-      <div id="item-55">
+      <div id="item-55" class="center">
         <p>6</p>
       </div>
-      <div id="item-56">
+      <div id="item-56" class="center">
         <p>9</p>
       </div>
-      <div id="item-57">
+      <div id="item-57" class="center">
         <p>7</p>
       </div>
-      <div id="item-58">
+      <div id="item-58" class="center">
         <p>4</p>
       </div>
       <div id="item-59">&nbsp;</div>
       <div id="item-60">&nbsp;</div>
       <div id="item-61">&nbsp;</div>
       <div id="item-62">&nbsp;</div>
-      <div id="item-63">
+      <div id="item-63" class="middle">
         <h3>Անվանումը</h3>
       </div>
-      <div id="item-64">
+      <div id="item-64" class="center">
         <h3>"Թել-Սել Մարկետ"Փակ բաժնետիրական ընկերություն (ՓԲԸ)</h3>
       </div>
-      <div id="item-65">
+      <div id="item-65" class="center">
         <h3>Ավելացված հարկ վճարողի հաշվառման համարը</h3>
       </div>
       <div id="item-66">&nbsp;</div>
       <div id="item-67">&nbsp;</div>
       <div id="item-68">&nbsp;</div>
       <div id="item-69">&nbsp;</div>
-      <div id="item-70">
+      <div id="item-70" class="center">
         <p>1</p>
       </div>
-      <div id="item-71">
+      <div id="item-71" class="center">
         <p>/</p>
       </div>
-      <div id="item-72">
+      <div id="item-72" class="center">
         <p>4</p>
       </div>
-      <div id="item-73">
+      <div id="item-73" class="center">
         <p>7</p>
       </div>
-      <div id="item-74">
+      <div id="item-74" class="center">
         <p>9</p>
       </div>
-      <div id="item-75">
+      <div id="item-75" class="center">
         <p>6</p>
       </div>
-      <div id="item-76">
+      <div id="item-76" class="center">
         <p>3</p>
       </div>
-      <div id="item-77">
+      <div id="item-77" class="center">
         <p>2</p>
       </div>
-      <div id="item-78">
+      <div id="item-78" class="center">
         <p>0</p>
       </div>
-      <div id="item-79">
+      <div id="item-79" class="center">
         <p>0</p>
       </div>
       <div id="item-80">&nbsp;</div>
       <div id="item-81">&nbsp;</div>
-      <div id="item-82">
+      <div id="item-82" class="middle">
         <h3>Բանկային տվյալներ</h3>
       </div>
       <div id="item-83">&nbsp;</div>
-      <div id="item-84">
+      <div id="item-84" class="middle">
         <h3>Գտնվելու վայրը(հասցե)</h3>
       </div>
-      <div id="item-85">
+      <div id="item-85" class="center">
         <h3>
           ԵՐԵՎԱՆ ԱՐԱԲԿԻՐ ԱՐԱԲԿԻՐ ԹԱՂԱՄԱՍ ՀԱԿՈԲՀԱԿՈԲՅԱՆ Փ․3,հիմն․ 1-ին սեկ 3հ
         </h3>
       </div>
-      <div id="item-86">
+      <div id="item-86" class="middle">
         <h3>Լրացուցիչ տվյալներ</h3>
       </div>
       <div id="item-87">&nbsp;</div>
-      <div id="item-88">
+      <div id="item-88" class="middle">
         <h3>Ում միջոցով</h3>
       </div>
-      <div id="item-89">
+      <div id="item-89" class="middle">
         <h3>Անուն, Ազգանուն</h3>
       </div>
-      <div id="item-90">
+      <div id="item-90" class="middle">
         <h3>Լիգազորագիր</h3>
       </div>
-      <div id="item-91">
+      <div id="item-91" class="middle">
         <h3>Համար</h3>
       </div>
-      <div id="item-92">
+      <div id="item-92" class="middle">
         <h3>Ամսաթիվ</h3>
       </div>
       <div id="item-93">&nbsp;</div>
       <div id="item-94">&nbsp;</div>
       <div id="item-95">&nbsp;</div>
       <div id="item-96">&nbsp;</div>
-      <div id="item-97">
+      <div id="item-97" class="center">
         <h4>
           Ծառայությունների մատուցման (աշխատանեքների կատարման) ծավալի և վճարի
           ենթակա գումարի հաշվարկը
         </h4>
       </div>
-      <div id="item-98">
-        <h4 style="transform: rotate(270deg)">N</h4>
+      <div id="item-98" class="center">
+        <h4>N</h4>
       </div>
-      <div id="item-99" class="item-99">
-        <div>
-          <h4>Ծառայությունների (աշխատանքների) անվանումը (բովանդակությունը)</h4>
-        </div>
+      <div id="item-99" class="center">
+        <h4>Ծառայությունների (աշխատանքների) անվանումը (բովանդակությունը)</h4>
       </div>
-      <div id="item-100">
-        <h4 style="transform: rotate(270deg)">Ընհամենը</h4>
+      <div id="item-100" class="center">
+        <h4>Ընհամենը</h4>
       </div>
-      <div id="item-101">
-        <h4 style="transform: rotate(270deg)">Չափման միավորը</h4>
+      <div id="item-101" class="center">
+        <h4>Չափման միավորը</h4>
       </div>
-      <div id="item-102">
-        <h4 style="transform: rotate(270deg)">
-          Ընդհանուր ծավալը(ժամանակաշրջանը)
-        </h4>
+      <div id="item-102" class="center">
+        <h4>Ընդհանուր ծավալը(ժամանակաշրջանը)</h4>
       </div>
-      <div id="item-103">
-        <h4 style="transform: rotate(270deg)">Միավորի գինը</h4>
+      <div id="item-103" class="center">
+        <h4>Միավորի գինը</h4>
       </div>
-      <div id="item-104">
-        <h4 style="transform: rotate(270deg)">Զեղչ(%)</h4>
+      <div id="item-104" class="center">
+        <h4>Զեղչ(%)</h4>
       </div>
-      <div id="item-105">
-        <h4 style="transform: rotate(270deg)">Արժեքը</h4>
+      <div id="item-105" class="center">
+        <h4>Արժեքը</h4>
       </div>
-      <div id="item-106">
-        <h4 style="transform: rotate(270deg)">ԱԱՀ դրույքաչափը (%)</h4>
+      <div id="item-106" class="center">
+        <h4>ԱԱՀ դրույքաչափը (%)</h4>
       </div>
-      <div id="item-107">
-        <h4 style="transform: rotate(270deg)">ԱԱՀ գումարը</h4>
+      <div id="item-107" class="center">
+        <h4>ԱԱՀ գումարը</h4>
       </div>
-      <div id="item-108">
+      <div id="item-108" class="center">
         <h3>1</h3>
       </div>
-      <div id="item-109">
+      <div id="item-109" class="center">
         <h3>2</h3>
       </div>
-      <div id="item-110">
+      <div id="item-110" class="center">
         <h3>3</h3>
       </div>
-      <div id="item-111">
+      <div id="item-111" class="center">
         <h3>4</h3>
       </div>
-      <div id="item-112">
+      <div id="item-112" class="center">
         <h3>5</h3>
       </div>
-      <div id="item-113">
+      <div id="item-113" class="center">
         <h3>6</h3>
       </div>
-      <div id="item-114">
+      <div id="item-114" class="center">
         <h3>7</h3>
       </div>
-      <div id="item-115">
+      <div id="item-115" class="center">
         <h3>8</h3>
       </div>
-      <div id="item-116">
+      <div id="item-116" class="center">
         <h3>9</h3>
       </div>
-      <div id="item-117">
+      <div id="item-117" class="center">
         <h3>10</h3>
       </div>
-      <div id="item-118">
+      <div id="item-118" class="center">
         <h3>1</h3>
       </div>
-      <div id="item-119">
+      <div id="item-119" class="center">
         <h3>
           Ընկերության գրանցման հաստատման վճարում՝ գումարի հետվերադարձի պայմանով
         </h3>
       </div>
       <div id="item-120">&nbsp;</div>
       <div id="item-121">&nbsp;</div>
-      <div id="item-122">
+      <div id="item-122" class="center">
         <p>100</p>
       </div>
       <div id="item-123">&nbsp;</div>
-      <div id="item-124">
+      <div id="item-124" class="center">
         <p>100</p>
       </div>
-      <div id="item-125">
+      <div id="item-125" class="center">
         <p>20</p>
       </div>
-      <div id="item-126">
+      <div id="item-126" class="center">
         <p>20</p>
       </div>
-      <div id="item-127">
+      <div id="item-127" class="center">
         <p>120</p>
       </div>
-      <div id="item-128">
+      <div id="item-128" class="middle">
         <h3>Ընդհամենը</h3>
       </div>
       <div id="item-129">&nbsp;</div>
       <div id="item-130">&nbsp;</div>
       <div id="item-131">&nbsp;</div>
       <div id="item-132">&nbsp;</div>
-      <div id="item-133">
+      <div id="item-133" class="center">
         <p>100</p>
       </div>
-      <div id="item-134">
+      <div id="item-134" class="center">
         <p>20</p>
       </div>
-      <div id="item-135">
+      <div id="item-135" class="center">
         <p>20</p>
       </div>
-      <div id="item-136">
+      <div id="item-136" class="center">
         <p>120</p>
       </div>
     </div>
