--- a/secondTable.html
+++ b/secondTable.html
@@ -6,40 +6,40 @@
     <link rel="stylesheet" href="style.css" />
     <title>Table 2</title>
   </head>
-  <body style="padding: 50px">
+  <body>
     <div class="angry-grid">
       <div id="item-0" class="center">
-        <h3>ՀԱՇԻՎ-ԱՊՐԱՆՔԱԳԻՐ</h3>
+        <h4>ՀԱՇԻՎ-ԱՊՐԱՆՔԱԳԻՐ</h4>
         <p>(ծառայությունների մատուցման, աշխատանքների կատարման)</p>
       </div>
       <div id="item-1" class="center">
-        <h3>Պայմանագիր</h3>
+        <h4>Պայմանագիր</h4>
       </div>
       <div id="item-2" class="center">
-        <h3>Կնքման ամսաթիվ</h3>
+        <h4>Կնքման ամսաթիվ</h4>
       </div>
-      <div id="item-3" class="middle">
-        <h3>Համար</h3>
+      <div id="item-3" class="center">
+        <h4>Համար</h4>
       </div>
       <div id="item-4" class="center">
         <p>Թելսել Մարկետ Օֆերտա</p>
       </div>
       <div id="item-5">&nbsp;</div>
       <div id="item-6">&nbsp;</div>
-      <div id="item-7" class="middle">
-        <h3>Լրացուցիչ տվյալներ(պայմաններ)</h3>
+      <div id="item-7" class="center">
+        <h4>Լրացուցիչ տվյալներ(պայմաններ)</h4>
       </div>
       <div id="item-8">&nbsp;</div>
-      <div id="item-9" class="middle">
-        <h3>ՀԴՄ կտրոնի համար</h3>
+      <div id="item-9" class="center">
+        <h4>ՀԴՄ կտրոնի համար</h4>
       </div>
       <div id="item-10">&nbsp;</div>
       <div id="item-11" class="center">
-        <h3>Ծառայություններ մատուցող (աշխատանքներ կատարող) անձի</h3>
+        <h4>Ծառայություններ մատուցող (աշխատանքներ կատարող) անձի</h4>
       </div>
       <div id="item-12">&nbsp;</div>
       <div id="item-13" class="center">
-        <h3>Հարկ վճարողի հաշվեհամարը (ՀՎՀՀ)</h3>
+        <h4>Հարկ վճարողի հաշվեհամարը (ՀՎՀՀ)</h4>
       </div>
       <div id="item-14" class="center">
         <p>0</p>
@@ -70,10 +70,10 @@
       <div id="item-24">&nbsp;</div>
       <div id="item-25">&nbsp;</div>
       <div id="item-26" class="center">
-        <h3>Անվանումը</h3>
+        <h4>Անվանումը</h4>
       </div>
       <div id="item-27" class="center">
-        <h3>Ավելացված հարկ վճարողի հաշվառման համարը</h3>
+        <h4>Ավելացված հարկ վճարողի հաշվառման համարը</h4>
       </div>
       <div id="item-28">&nbsp;</div>
       <div id="item-29">&nbsp;</div>
@@ -87,26 +87,26 @@
       <div id="item-37">&nbsp;</div>
       <div id="item-38">&nbsp;</div>
       <div id="item-39">&nbsp;</div>
-      <div id="item-40" class="middle">
-        <h3>Բանկային տվյալներ</h3>
+      <div id="item-40" class="center">
+        <h4>Բանկային տվյալներ</h4>
       </div>
       <div id="item-41">&nbsp;</div>
       <div id="item-42">&nbsp;</div>
-      <div id="item-43" class="middle">
-        <h3>Գտնվելու վայրը(հասցե)</h3>
+      <div id="item-43" class="center">
+        <h4>Գտնվելու վայրը(հասցե)</h4>
       </div>
       <div id="item-44">&nbsp;</div>
-      <div id="item-45" class="middle">
-        <h3>Լրացուցիչ տվյալներ</h3>
+      <div id="item-45" class="center">
+        <h4>Լրացուցիչ տվյալներ</h4>
       </div>
       <div id="item-46">&nbsp;</div>
       <div id="item-47">&nbsp;</div>
       <div id="item-48" class="center">
-        <h3>Ծառայություններ (աշխատանքներ) ստացող անձի</h3>
+        <h4>Ծառայություններ (աշխատանքներ) ստացող անձի</h4>
       </div>
       <div id="item-49">&nbsp;</div>
       <div id="item-50" class="center">
-        <h3>Հարկ վճարողի հաշվեհամարը (ՀՎՀՀ)</h3>
+        <h4>Հարկ վճարողի հաշվեհամարը (ՀՎՀՀ)</h4>
       </div>
       <div id="item-51" class="center">
         <p>0</p>
@@ -136,14 +136,14 @@
       <div id="item-60">&nbsp;</div>
       <div id="item-61">&nbsp;</div>
       <div id="item-62">&nbsp;</div>
-      <div id="item-63" class="middle">
-        <h3>Անվանումը</h3>
+      <div id="item-63" class="center">
+        <h4>Անվանումը</h4>
       </div>
       <div id="item-64" class="center">
-        <h3>"Թել-Սել Մարկետ"Փակ բաժնետիրական ընկերություն (ՓԲԸ)</h3>
+        <h4>"Թել-Սել Մարկետ"Փակ բաժնետիրական ընկերություն (ՓԲԸ)</h4>
       </div>
       <div id="item-65" class="center">
-        <h3>Ավելացված հարկ վճարողի հաշվառման համարը</h3>
+        <h4>Ավելացված հարկ վճարողի հաշվառման համարը</h4>
       </div>
       <div id="item-66">&nbsp;</div>
       <div id="item-67">&nbsp;</div>
@@ -181,114 +181,114 @@
       </div>
       <div id="item-80">&nbsp;</div>
       <div id="item-81">&nbsp;</div>
-      <div id="item-82" class="middle">
-        <h3>Բանկային տվյալներ</h3>
+      <div id="item-82" class="center">
+        <h4>Բանկային տվյալներ</h4>
       </div>
       <div id="item-83">&nbsp;</div>
-      <div id="item-84" class="middle">
-        <h3>Գտնվելու վայրը(հասցե)</h3>
+      <div id="item-84" class="center">
+        <h4>Գտնվելու վայրը(հասցե)</h4>
       </div>
       <div id="item-85" class="center">
-        <h3>
+        <h4>
           ԵՐԵՎԱՆ ԱՐԱԲԿԻՐ ԱՐԱԲԿԻՐ ԹԱՂԱՄԱՍ ՀԱԿՈԲՀԱԿՈԲՅԱՆ Փ․3,հիմն․ 1-ին սեկ 3հ
-        </h3>
+        </h4>
       </div>
-      <div id="item-86" class="middle">
-        <h3>Լրացուցիչ տվյալներ</h3>
+      <div id="item-86" class="center">
+        <h4>Լրացուցիչ տվյալներ</h4>
       </div>
       <div id="item-87">&nbsp;</div>
-      <div id="item-88" class="middle">
-        <h3>Ում միջոցով</h3>
+      <div id="item-88" class="center">
+        <h4>Ում միջոցով</h4>
       </div>
-      <div id="item-89" class="middle">
-        <h3>Անուն, Ազգանուն</h3>
+      <div id="item-89" class="center">
+        <h4>Անուն, Ազգանուն</h4>
       </div>
-      <div id="item-90" class="middle">
-        <h3>Լիգազորագիր</h3>
+      <div id="item-90" class="center">
+        <h4>Լիգազորագիր</h4>
       </div>
-      <div id="item-91" class="middle">
-        <h3>Համար</h3>
+      <div id="item-91" class="center">
+        <h4>Համար</h4>
       </div>
-      <div id="item-92" class="middle">
-        <h3>Ամսաթիվ</h3>
+      <div id="item-92" class="center">
+        <h4>Ամսաթիվ</h4>
       </div>
       <div id="item-93">&nbsp;</div>
       <div id="item-94">&nbsp;</div>
       <div id="item-95">&nbsp;</div>
       <div id="item-96">&nbsp;</div>
       <div id="item-97" class="center">
-        <h4>
+        <h5>
           Ծառայությունների մատուցման (աշխատանեքների կատարման) ծավալի և վճարի
           ենթակա գումարի հաշվարկը
-        </h4>
+        </h5>
       </div>
       <div id="item-98" class="center">
-        <h4>N</h4>
+        <h5>N</h5>
       </div>
       <div id="item-99" class="center">
-        <h4>Ծառայությունների (աշխատանքների) անվանումը (բովանդակությունը)</h4>
+        <h5>Ծառայությունների (աշխատանքների) անվանումը (բովանդակությունը)</h5>
       </div>
       <div id="item-100" class="center">
-        <h4>Ընհամենը</h4>
+        <h5>Ընհամենը</h5>
       </div>
       <div id="item-101" class="center">
-        <h4>Չափման միավորը</h4>
+        <h5>Չափման միավորը</h5>
       </div>
       <div id="item-102" class="center">
-        <h4>Ընդհանուր ծավալը(ժամանակաշրջանը)</h4>
+        <h5>Ընդհանուր ծավալը (ժամանակաշրջանը)</h5>
       </div>
       <div id="item-103" class="center">
-        <h4>Միավորի գինը</h4>
+        <h5>Միավորի գինը</h5>
       </div>
       <div id="item-104" class="center">
-        <h4>Զեղչ(%)</h4>
+        <h5>Զեղչ(%)</h5>
       </div>
       <div id="item-105" class="center">
-        <h4>Արժեքը</h4>
+        <h5>Արժեքը</h5>
       </div>
       <div id="item-106" class="center">
-        <h4>ԱԱՀ դրույքաչափը (%)</h4>
+        <h5>ԱԱՀ դրույքաչափը (%)</h5>
       </div>
       <div id="item-107" class="center">
-        <h4>ԱԱՀ գումարը</h4>
+        <h5>ԱԱՀ գումարը</h5>
       </div>
       <div id="item-108" class="center">
-        <h3>1</h3>
+        <h4>1</h4>
       </div>
       <div id="item-109" class="center">
-        <h3>2</h3>
+        <h4>2</h4>
       </div>
       <div id="item-110" class="center">
-        <h3>3</h3>
+        <h4>3</h4>
       </div>
       <div id="item-111" class="center">
-        <h3>4</h3>
+        <h4>4</h4>
       </div>
       <div id="item-112" class="center">
-        <h3>5</h3>
+        <h4>5</h4>
       </div>
       <div id="item-113" class="center">
-        <h3>6</h3>
+        <h4>6</h4>
       </div>
       <div id="item-114" class="center">
-        <h3>7</h3>
+        <h4>7</h4>
       </div>
       <div id="item-115" class="center">
-        <h3>8</h3>
+        <h4>8</h4>
       </div>
       <div id="item-116" class="center">
-        <h3>9</h3>
+        <h4>9</h4>
       </div>
       <div id="item-117" class="center">
-        <h3>10</h3>
+        <h4>10</h4>
       </div>
       <div id="item-118" class="center">
-        <h3>1</h3>
+        <h4>1</h4>
       </div>
       <div id="item-119" class="center">
-        <h3>
+        <h4>
           Ընկերության գրանցման հաստատման վճարում՝ գումարի հետվերադարձի պայմանով
-        </h3>
+        </h4>
       </div>
       <div id="item-120">&nbsp;</div>
       <div id="item-121">&nbsp;</div>
@@ -308,8 +308,8 @@
       <div id="item-127" class="center">
         <p>120</p>
       </div>
-      <div id="item-128" class="middle">
-        <h3>Ընդհամենը</h3>
+      <div id="item-128" class="center">
+        <h4>Ընդհամենը</h4>
       </div>
       <div id="item-129">&nbsp;</div>
       <div id="item-130">&nbsp;</div>
